fix overflow issue in panel header

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -573,6 +573,10 @@ body.modal-open {
   }
 }
 
+.panel-heading.image-file-name {
+  overflow: hidden;
+}
+
 #image-form-flow-controls {
   #right-control {
     text-align: right;
